# github_tracker

./: .env.example  Cargo.toml  README.md  github-tracker.service  install.sh  repos.toml
docs/: DOCUMENTATION.md  STRUCTURE.md
src/: config.rs  github.rs  main.rs  models.rs  state.rs  telegram.rs  web.rs
